--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - pip install -e .[test]
 
 script:
-  - coverage run --source=powerdata_download -m pytest -v --vcr use
+  - python -m pytest --color=yes
 
 after_success:
   - codecov
